# por-client-unitas

./: README.md
client/: .config.example.yml  .env.example  Dockerfile  README.md  config.schema.json  docker-compose.yml  package.json
client/src/: all.ts  binance.ts  utils.ts
program/: Cargo.toml
program/src/: errors.rs  main.rs  structs.rs
zkvm-program/: build.sh
zkvm-program/brevis/: Cargo.toml  README.md
zkvm-program/brevis/elf/: riscv32im-pico-zkvm-elf
zkvm-program/brevis/src/: main.rs
zkvm-program/common/: Cargo.toml
zkvm-program/common/src/: adapter.rs  core.rs  errors.rs  lib.rs
zkvm-program/src/: errors.rs  main.rs
zkvm-program/succinct/: Cargo.toml
zkvm-program/succinct/src/: main.rs
