[package]
version = "0.1.0"
name = "program"
edition = "2024"

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico.git", tag = "v1.2.2" }

serde_json = "1.0"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
anyhow = { version = "1.0.40", default-features = false }
thiserror = "2.0.17"
bincode = "1.3"

zktls-att-verification = { git = "https://github.com/primus-labs/zktls-att-verification.git", branch = "network-por" }
