[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
anyhow = { version = "1.0.40", default-features = false }
thiserror = "2.0.17"
bincode = "1.3"

zktls-att-verification = { git = "https://github.com/primus-labs/zktls-att-verification.git", branch = "network-por" } # 0221d80
